GUI works, run using gradle task run