@@ -1,5 +1,7 @@
 plugins {
     id("java")
+    id("application")
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "csc380.Team2"
@@ -7,6 +9,24 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+}
+
+application {
+    mainClass.set("HomeGUI")
+}
+
+tasks.named<JavaExec>("run") {
+    val javaFxModules = listOf("javafx.controls", "javafx.fxml", "javafx.graphics")
+
+    jvmArgs = listOf(
+        "--module-path", classpath.asPath,
+        "--add-modules", javaFxModules.joinToString(",")
+    )
+}
+
+javafx {
+    version = "25"
+    modules("javafx.controls", "javafx.fxml", "javafx.graphics")
 }
 
 dependencies {
